--- a/weather_app/package.json
+++ b/weather_app/package.json
@@ -14,10 +14,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-draw": "^0.21.0",
     "react-router-dom": "^7.9.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
